--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -6,7 +6,7 @@
 
     <!-- Page wraper -->
     <!-- ng-class with current state name give you the ability to extended customization your view -->
-    <div id="page-wrapper" class="gray-bg {{$state.current.name}}" ng-controller="activityCtrl">
+    <div id="page-wrapper" class="gray-bg {{$state.current.name}}">
         <div class="row wrapper border-bottom white-bg page-heading p-sm">
             <div class="col-sm-6">
                 <span class="lead m-r-sm m-b-none">Activity</span>
