--- a/public/css/plugins/ionRangeSlider/ion.rangeSlider.skinSimple.css
+++ b/public/css/plugins/ionRangeSlider/ion.rangeSlider.skinSimple.css
@@ -11,7 +11,7 @@
 .irs-line-right,
 .irs-diapason,
 .irs-slider {
-    background: url(../img/sprite-skin-simple.png) repeat-x;
+    background: url(../images/sprite-skin-simple.png) repeat-x;
 }
 
 .irs {
