--- a/public/views/automation.html
+++ b/public/views/automation.html
@@ -11,50 +11,85 @@
         <!-- Main view  -->
 
         <div class="row wrapper border-bottom white-bg page-heading p-sm">
-            <div class="col-sm-6">
-                <span class="lead m-r-sm m-b-none">Automation</span>
-            </div>
-            <div class="col-sm-6 filter-group">
-                <label>Timeframe:</label>
-                <div class="col-sm-4 daterangepicker_input">
-                    <input type="text" date-range-picker class="form-control date-picker" ng-model="daterange.data">
-                    <i class="fa fa-calendar glyphicon glyphicon-calendar"></i>
-                </div>
-                <label>Doctype:</label>
+            <span class="lead m-r-sm m-b-none filter-bar">Automation</span>
+            <div class="col-sm-2">
+                <label>Pagetype:</label>
                 <div class="btn-group" uib-dropdown keyboard-nav>
-                    <button class="btn btn-default " type="button" id="dropdownMenuDocType" uib-dropdown-toggle>{{selectedDocType}}
-                        <span class="caret"></span>
+                    <button id="simple-btn-keyboard-nav" type="button" class="btn btn-default" uib-dropdown-toggle>
+                        {{selectedPageType}} <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="dropdownMenuDocType1" ng-init="getDocTypes()">
-                        <li role="menuitem" ng-repeat="a in docTypes"><a ng-click="dropdownMenuDocTypeSelected(a)">{{a}}</a></li>
+                    <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="simple-btn-keyboard-nav">
+                        <li role="menuitem" ng-repeat="a in pageTypes"><a ng-click="dropdownMenuPageTypeSelected(a)">{{a}}</a></li>
                     </ul>
                 </div>
             </div>
+            <!--<div class="col-sm-2">-->
+                <!--<label>Rowtype:</label>-->
+                <!--<div class="btn-group" uib-dropdown keyboard-nav>-->
+                    <!--<button id="btn-row-type" type="button" class="btn btn-default" uib-dropdown-toggle>-->
+                        <!--{{selectedRowType}} <span class="caret"></span>-->
+                    <!--</button>-->
+                    <!--<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-row-type">-->
+                        <!--<li role="menuitem" ng-repeat="a in rowTypes"><a ng-click="dropdownMenuRowTypeSelected(a)">{{a}}</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-2">-->
+                <!--<label>Field:</label>-->
+                <!--<div class="btn-group" uib-dropdown keyboard-nav>-->
+                    <!--<button id="btn-field-type" type="button" class="btn btn-default" uib-dropdown-toggle>-->
+                        <!--{{selectedFieldType}} <span class="caret"></span>-->
+                    <!--</button>-->
+                    <!--<ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-field-type">-->
+                        <!--<li role="menuitem" ng-repeat="a in fieldTypes"><a ng-click="dropdownMenuFieldTypeSelected(a)">{{a}}</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+            <div class="col-sm-5">
+                    <label>Timeframe:</label>
+                    <div class="btn-group daterangepicker_input">
+                        <input type="text" date-range-picker class="btn-default form-control date-picker pull-right" ng-model="daterange.data" />
+                        <i class="fa fa-calendar glyphicon glyphicon-calendar"></i>
+                    </div>
+                </div>
         </div>
+
         <div class="wrapper wrapper-content animated fadeInRight">
-            <div ng-controller="autoThresholdCtrl">
+            <div ng-controller="autoFieldCtrl">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="ibox float-e-margins">
+                        <div class="ibox float-e-margins"  >
                             <div class="ibox-title">
-                                <h3 class="text-center">Statistics</h3>
+                                <h3 class="text-center">Automation Field Accuracy</h3>
                             </div>
-                            <div class="ibox-content">
-                                <div id='autoThreshold-chart' style='height: 300px;' ng-init='getAutoThreshold()'></div>
+
+                            <div class="ibox-content" >
+                                <span class="slider-header-title">Total Threshold</span>
+                                <div class="slider-container">
+                                    <div ion-range-slider range-options="ionSliderOptions1" data-label="total_threshold"></div>
+                                </div>
+                                <div ng-repeat="field in fieldTypes track by $index">
+                                    <span class="slider-title">{{field}}</span>
+                                    <div class="slider-container">
+                                        <div ion-range-slider range-options="ionSliderOptions1" data-label="{{field}}"></div>
+                                        <div  id='autoField-chart{{$index}}' ></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div ng-controller="accuracyCtrl">
+
+            <div ng-controller="autoDocCtrl">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="ibox float-e-margins">
                             <div class="ibox-title">
-                                <h3 class="text-center">Accuracy</h3>
+                                <h3 class="text-center">Automation Document Accuracy</h3>
                             </div>
                             <div class="ibox-content">
-                                <div id='autoAccuracy-chart' style='height: 300px;' ng-init='getAccuracy()'></div>
+                                <div id='autoDoc-chart' style='height: 300px;'></div>
                             </div>
                         </div>
                     </div>
