--- a/public/views/stats.html
+++ b/public/views/stats.html
@@ -93,6 +93,18 @@
                         </div>
                     </div>
                 </div>
+                <div ng-controller="avgAccuracyCtrl">
+                    <div class="col-lg-12">
+                        <div class="ibox float-e-margins">
+                            <div class="ibox-title">
+                                <h3 class="text-center">Average Accuracy</h3>
+                            </div>
+                            <div class="ibox-content">
+                                <div id="chart-avg-accuracy" style='height: 300px;'></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div ng-controller="accuracyCtrl">
                     <div class="row">
                         <div class="col-md-12">
@@ -145,8 +157,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="row" ng-controller="timingsCtrl" ng-init="getTimings()">
                     <div class="col-sm-6">
                         <div class="ibox float-e-margins">
